--- a/Repo/DRFront.csproj
+++ b/Repo/DRFront.csproj
@@ -80,6 +80,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SettingViewModel.cs" />
     <Compile Include="MainWindowBoardImage.cs" />
     <Compile Include="MainWindowProjectManagement.cs" />
     <Compile Include="MainWindowSourceManagement.cs" />
@@ -90,7 +91,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SettingWindow.xaml.cs">
+      <DependentUpon>SettingWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TopSelectorViewModel.cs" />
+    <Compile Include="Util.cs" />
     <Compile Include="VHDLSources.cs" />
     <Compile Include="VHDLTemplateViewModel.cs" />
     <Compile Include="VHDLTemplateWindow.xaml.cs">
@@ -112,6 +117,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SettingWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -157,9 +166,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\DRFront.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Nexys.jpg" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6">
